--- a/AppOfThrones/Episodes/EpisodeViewController.xib
+++ b/AppOfThrones/Episodes/EpisodeViewController.xib
@@ -40,10 +40,12 @@
                         <constraint firstAttribute="height" constant="31" id="haU-9U-UA9"/>
                     </constraints>
                 </switch>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajK-B1-uRV">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajK-B1-uRV">
                     <rect key="frame" x="38" y="766" width="330" height="82"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="82" id="UxI-hz-LW4"/>
+                    </constraints>
                     <state key="normal" title="Rate">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -54,11 +56,15 @@
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
             <constraints>
+                <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="10C-pY-LCH"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qfn-km-yR4" secondAttribute="trailing" constant="27" id="HOU-ew-Cj9"/>
                 <constraint firstItem="bcf-12-YLg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Iqr-iA-l5V"/>
                 <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="eS8-QO-hhf"/>
                 <constraint firstItem="bcf-12-YLg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="gKB-C0-6jL"/>
                 <constraint firstItem="qfn-km-yR4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="hw2-PG-aph"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ajK-B1-uRV" secondAttribute="bottom" constant="14" id="on1-cp-bqi"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ajK-B1-uRV" secondAttribute="trailing" constant="46" id="oxk-vc-q32"/>
+                <constraint firstItem="ajK-B1-uRV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="38" id="xad-89-GUZ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
