--- a/AppOfThrones/Episodes/EpisodeViewController.xib
+++ b/AppOfThrones/Episodes/EpisodeViewController.xib
@@ -17,22 +17,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qfn-km-yR4">
-                    <rect key="frame" x="20" y="44" width="367" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="31" id="PuI-bO-Mh9"/>
-                    </constraints>
-                    <segments>
-                        <segment title="1"/>
-                        <segment title="2"/>
-                        <segment title="3"/>
-                        <segment title="4"/>
-                        <segment title="5"/>
-                        <segment title="6"/>
-                        <segment title="7"/>
-                        <segment title="8"/>
-                    </segments>
-                </segmentedControl>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bcf-12-YLg">
                     <rect key="frame" x="182.5" y="432.5" width="51" height="31"/>
                     <constraints>
@@ -53,15 +37,31 @@
                         <action selector="openRate:" destination="-1" eventType="touchUpInside" id="MuR-sG-tZM"/>
                     </connections>
                 </button>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qfn-km-yR4">
+                    <rect key="frame" x="24" y="61" width="367" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="31" id="PuI-bO-Mh9"/>
+                    </constraints>
+                    <segments>
+                        <segment title="1"/>
+                        <segment title="2"/>
+                        <segment title="3"/>
+                        <segment title="4"/>
+                        <segment title="5"/>
+                        <segment title="6"/>
+                        <segment title="7"/>
+                        <segment title="8"/>
+                    </segments>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
             <constraints>
-                <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="10C-pY-LCH"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qfn-km-yR4" secondAttribute="trailing" constant="27" id="HOU-ew-Cj9"/>
+                <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="17" id="10C-pY-LCH"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qfn-km-yR4" secondAttribute="trailing" constant="23" id="HOU-ew-Cj9"/>
                 <constraint firstItem="bcf-12-YLg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Iqr-iA-l5V"/>
-                <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="eS8-QO-hhf"/>
+                <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="17" id="eS8-QO-hhf"/>
                 <constraint firstItem="bcf-12-YLg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="gKB-C0-6jL"/>
-                <constraint firstItem="qfn-km-yR4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="hw2-PG-aph"/>
+                <constraint firstItem="qfn-km-yR4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="hw2-PG-aph"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ajK-B1-uRV" secondAttribute="bottom" constant="14" id="on1-cp-bqi"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ajK-B1-uRV" secondAttribute="trailing" constant="46" id="oxk-vc-q32"/>
                 <constraint firstItem="ajK-B1-uRV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="38" id="xad-89-GUZ"/>
