--- a/AppOfThrones/Episodes/EpisodeViewController.xib
+++ b/AppOfThrones/Episodes/EpisodeViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EpisodeViewController" customModule="AppOfThrones" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="K30-mS-0RY" id="1x3-FP-7Ub"/>
                 <outlet property="view" destination="iN0-l3-epB" id="otS-G6-2J0"/>
             </connections>
         </placeholder>
@@ -17,26 +18,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bcf-12-YLg">
-                    <rect key="frame" x="182.5" y="432.5" width="51" height="31"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="49" id="3MC-tn-FhS"/>
-                        <constraint firstAttribute="height" constant="31" id="haU-9U-UA9"/>
-                    </constraints>
-                </switch>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajK-B1-uRV">
-                    <rect key="frame" x="38" y="766" width="330" height="82"/>
-                    <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="82" id="UxI-hz-LW4"/>
-                    </constraints>
-                    <state key="normal" title="Rate">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                    <connections>
-                        <action selector="openRate:" destination="-1" eventType="touchUpInside" id="MuR-sG-tZM"/>
-                    </connections>
-                </button>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qfn-km-yR4">
                     <rect key="frame" x="24" y="61" width="367" height="32"/>
                     <constraints>
@@ -53,18 +34,21 @@
                         <segment title="8"/>
                     </segments>
                 </segmentedControl>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K30-mS-0RY">
+                    <rect key="frame" x="0.0" y="110" width="414" height="752"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                </tableView>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
             <constraints>
                 <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="17" id="10C-pY-LCH"/>
+                <constraint firstItem="K30-mS-0RY" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7Y5-GH-DBt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="qfn-km-yR4" secondAttribute="trailing" constant="23" id="HOU-ew-Cj9"/>
-                <constraint firstItem="bcf-12-YLg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Iqr-iA-l5V"/>
                 <constraint firstItem="qfn-km-yR4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="17" id="eS8-QO-hhf"/>
-                <constraint firstItem="bcf-12-YLg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="gKB-C0-6jL"/>
+                <constraint firstItem="K30-mS-0RY" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="fEF-LV-1as"/>
                 <constraint firstItem="qfn-km-yR4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="hw2-PG-aph"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ajK-B1-uRV" secondAttribute="bottom" constant="14" id="on1-cp-bqi"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ajK-B1-uRV" secondAttribute="trailing" constant="46" id="oxk-vc-q32"/>
-                <constraint firstItem="ajK-B1-uRV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="38" id="xad-89-GUZ"/>
+                <constraint firstItem="K30-mS-0RY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="niK-V3-Pj2"/>
+                <constraint firstItem="K30-mS-0RY" firstAttribute="top" secondItem="qfn-km-yR4" secondAttribute="bottom" constant="18" id="w5O-AC-cq4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
