--- a/AppOfThrones/Base.lproj/LaunchScreen.storyboard
+++ b/AppOfThrones/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_1024" translatesAutoresizingMaskIntoConstraints="NO" id="tuM-gN-wD2">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="I1b-R3-Rjj"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ckL-w7-lLL"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dfS-q3-aUm"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="340" id="iM5-U9-mYG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -23,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_1024" width="512" height="512"/>
+    </resources>
 </document>
